--- a/exAlura/style.css
+++ b/exAlura/style.css
@@ -13,6 +13,11 @@
 
 
 }
+#banner{
+ width:100%;  
+ height: 250px;
+}
+   
 article{
     background:  linear-gradient(to bottom, white, rgba(220, 66, 66, 0.797), white);
     display: block;
@@ -20,7 +25,6 @@ article{
     height: 300px;
     box-shadow: 0px 0px 15px rgba(149, 7, 0, 0.516);
     position:relative;
-    top:25vh;
     border-radius: 5px;
     padding: 15px;
     transition: .5s;
