--- a/exAlura/style.css
+++ b/exAlura/style.css
@@ -97,4 +97,27 @@ color: red;
 }
 ul{
     list-style-type: none;
+    display: inline-block;
+    vertical-align: top;
+    width: 20%;
+    margin-right: 5%;
+}
+.item{
+   font-style: italic;
+  
+ 
+}
+
+
+#container{
+    padding: 20px; 
+}
+.titulo-center{
+    text-align: center;
+    padding: 10px;
+}
+#bene{
+    position: relative;
+  
+    width: 50%;
 }
