--- a/ex62/style.css
+++ b/ex62/style.css
@@ -18,7 +18,7 @@ body{
 .btn{
     position: relative;
     width:200px;
-    height: 60px;
+    height: 60px;   
     background: rgba(255,255,255,0.1);
     border-radius: 60px;
     display: flex;
@@ -53,7 +53,7 @@ body{
     font-size: 1.5em;
 }
 .btn span:hover{
-    left:calc(100% - 55px)
+    left:calc(100% - 55px);
 
 }
 .btn::after{
