--- a/exAlura2/css/estilo.css
+++ b/exAlura2/css/estilo.css
@@ -1,6 +1,6 @@
 
 
-@media screen  and (min-width:500px) and (max-width:768px){
+@media screen  and (min-width:500px) and (max-width:600px){
     button{
         display: block;
     }
@@ -14,6 +14,9 @@
         transform: translateY(-80px);
         
 
+    }
+    a{
+        font-size: 1.5em;
     }
     .active span::after {
      position: relative;
@@ -37,7 +40,6 @@
     }
     ul{
         display: block;
-        left:47%;
         line-height: 2.5em;
        
     }
