--- a/exAlura2/css/style.css
+++ b/exAlura2/css/style.css
@@ -12,11 +12,12 @@
 body{
 
     font-family: Arial, Helvetica, sans-serif;
-    background: rgb(231, 244, 248);
+  
     
 }
 header{
     position: relative;
+    background: rgb(231, 244, 248);
     width: 100%;
     height:100px;
     display:flex;
@@ -31,7 +32,7 @@ header{
     list-style-type: none;
     
 }
-li{
+ .nav li{
     padding-right: 30px;
     text-transform: uppercase;
 }
@@ -64,6 +65,7 @@ button{
     display: none;
 }
 span{
+
     cursor: pointer;
     display: block;
     position: absolute;
@@ -79,46 +81,76 @@ span::after,span::before{
     margin-top: 6px;
     background: black;
 }
-.grade{
-    position: absolute;
-    display: flex;
-    left:10rem;
-    list-style-type: none;
-   
-   
-}
-.grade  li {
-    display: block;
-    width: 300px;
-    padding-bottom: 20px;
-    margin: 10px;
-    border: 2px solid;
-    border-radius: 10px;
-    
+.produtos{
+
+    width: 950px;
+    margin:  0 auto;
+    padding: 50px 50px 0;
+  
   
 }
-.grade li  h2{
-position: relative;
- text-align: center;
- left: 10%;
+.produtos li:hover h2 {
+    font-size: 30px;
+    
+}
+
+.produtos li {
+    
+    display: inline-block;
+    list-style-type: none;
+    text-align: center;
+    width: 32%;
+    vertical-align: top;
+    margin: 0px .2%;
+    border: 1px solid;
+    border-radius: 10px;
+    transition: .3s ease;
+    padding: 10px;
+    cursor: pointer;
+    border: 2px solid rgb(4, 165, 252);
+    
+}
+.produtos li:hover {
+    border-radius: 20px 0px 20px ;
+
+    border: 2px solid rgb(216, 166, 4);
+    box-shadow:  0 0 12px rgba(254, 188, 5, 0.695);
+   
+}
+.produtos li:active{
+    border: 2px solid rgb(245, 0, 0);
+    box-shadow:  0 0 12px rgba(253, 64, 2, 0.861);
 
 }
-.grade p {
-    position: relative;
-    text-align: center;
-    left: 10%;
-    font-weight: bolder;
-    font-size: 0.750em;
-    font-weight: 200;
+.descri{
+    font-size: 17px;
 }
-.grade img {
-    position: relative;
-    left:12%;
-  
+.produtos h2{
+    font-size: 25px;
+    font-weight: bold;
 }
-.texto{
-    font-size: 2em;
+
+.preco{
+    font-size:22px;
+    font-weight: bold;
+    margin:  10px 0 0 ;
+}
+footer{
+    padding:40px 0 0 ;
+    margin-top: 10px;
     text-align: center;
+    background:url('../image/bg.jpg');
+    
+    
+}
+.cop{
+    color:white;
+    font-size: 13px;
+    margin:20px 0 0;
     font-weight: bolder;
-   
+
+}
+
+.im{
+    width: 100px;
 }
