--- a/exAlura03/css/style.css
+++ b/exAlura03/css/style.css
@@ -4,156 +4,79 @@
 *{
     padding: 0;
     margin: 0;
-    border: 0;
     box-sizing:border-box;
 }
 
    
-body{
-    height:100vh;
-    width:100vw;
+ body{
     font-family: Arial, Helvetica, sans-serif;
-  
-    
+    background:radial-gradient(rgb(244, 255, 252),rgb(255, 255, 255));
+
 }
 header{
-    position: relative;
-    background: rgb(231, 244, 248);
-    width: 100%;
-    height:100px;
-    display:flex;
+    display: flex;
     justify-content: space-between;
     align-items: center;
-    box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.317);
+    height: 100px;
+   
+    background: linear-gradient(to bottom, rgb(246, 227, 255),rgb(250, 250, 250), rgb(174, 155, 226))
+   
 }
- .nav ul {
-    position:absolute;
-    right:0;
+header #alura{
+    width:80px;
+
+}
+
+ nav ul{
+   
     display: flex;
     list-style-type: none;
-    
+   
 }
- .nav li{
-    padding-right: 30px;
-    text-transform: uppercase;
+li{
+    display: flex;
+    margin-right: 15px;
 }
-a{
+ a{
+    color:rgb(23, 38, 81);
     text-decoration: none;
-    padding:5px;
-    color:#000;
-    transition:  .3s ease;
-   
-}
-a:hover{
-   
-    background:white;
-    font-size: 1.3em;
-    font-weight: bolder;
-    border-radius: 10px;
-    color:rgb(1, 50, 114);
-    box-shadow: 0px 0px 15px rgb(156, 232, 255);
-    left:calc(100% - 55px);
-
-    
-}
-
-#alura{
-    position: relative;
-    padding: 5px;
-    height: 120px;
-}
-button{
-    display: none;
-}
-span{
-
-    cursor: pointer;
-    display: block;
-    position: absolute;
-    left:50%;
-    width:30px;
-    border-top: 2px solid;
-    
-}
-span::after,span::before{
-    content: '';
-    display: block;
-    height: 2px;
-    margin-top: 6px;
-    background: black;
-}
-.produtos{
-
-    width: 950px;
-    margin:  0 auto;
-    padding: 50px 50px 0;
-  
-  
-}
-.produtos li:hover h2 {
-    font-size: 30px;
-    
-}
-
-.produtos li {
-    
-    display: inline-block;
-    list-style-type: none;
-    text-align: center;
-    width: 32%;
-    vertical-align: top;
-    margin: 0px .2%;
-    border: 1px solid;
-    border-radius: 10px;
-    transition: .3s ease;
-    padding: 10px;
-    cursor: pointer;
-    border: 2px solid rgb(4, 165, 252);
-    
-}
-.produtos li:hover {
-    border-radius: 20px 0px 20px ;
-
-    border: 2px solid rgb(216, 166, 4);
-    box-shadow:  0 0 12px rgba(254, 188, 5, 0.695);
-   
-}
-.produtos li:active{
-    border: 2px solid rgb(245, 0, 0);
-    box-shadow:  0 0 12px rgba(253, 64, 2, 0.861);
-
-}
-.descri{
-    font-size: 17px;
-}
-.produtos h2{
     font-size: 25px;
     font-weight: bold;
-}
-
-.preco{
-    font-size:22px;
-    font-weight: bold;
-    margin:  10px 0 0 ;
-}
-footer{ 
-    position: relative;
-    height: 100%;
-    padding:40px 0 0 ;
-    margin-top: 10px;
-    text-align: center;
-    background:url('../image/bg.jpg');
-    
-    
-}
-.cop{
-    color:white;
-    font-size: 13px;
-    margin:20px 0 0;
+ }
+ a:hover{
+    font-size: 30px;
     font-weight: bolder;
+    color:rgb(50, 4, 135);
+    
+ }
+ footer{
+    display: block;
+    text-align: center;
+    background: url('../image/bg.jpg');
+   
+    color: white;
 
-}
+    
 
-.im{
-    width: 100px;
-}
+ }
+ .im{
+    padding:20px;
+ }
+ main{
+    width:940px;
+    margin: 0 auto;
+ }
+ form{
+    margin:40px 0;
+ }
+ form label{
+    display: block;
+    font-size: 20px;
+    margin: 0 0  10px;
+ }
+ form input{
+    display:block;
+    margin:  0 0 20px;
+    padding: 10px 25px;
+    width: 50%;
+ }
