--- a/exAlura03/css/estilo.css
+++ b/exAlura03/css/estilo.css
@@ -1,6 +1,10 @@
 
 
 @media screen  and (min-width:500px) and (max-width:600px){
+    form{
+        
+        width: 80%;
+     }
     button{
         display: block;
     }
