--- a/exAlura4/css/estilo.css
+++ b/exAlura4/css/estilo.css
@@ -1,8 +1,13 @@
+
+
 header{
  display: flex;
  justify-content: space-between;
  align-items: center;
  background: linear-gradient(-185deg, red,white);
+ overflow-y: hidden;
+ 
+ transition: .5s;
 }
 ul {
 display: flex;
@@ -90,8 +95,14 @@ a:hover{
     
 }
 .item{
+    position: relative;
     text-transform: none;
+    
+    line-height: 45px;
 
+}
+.item:first-child{
+    font-weight: bold;
 }
 
 .preco{
@@ -122,9 +133,7 @@ footer{
     width: 100%;
 
 }
-.container{
- 
-}
+
 .center{
     display: block;
 }
@@ -133,14 +142,19 @@ section{
     transform: translateX(100px);
 }
 .titulo-center{
-    text-align: center;
+   text-align: center;
     font-size: 2em;
     margin:  0 0 1em;
     font-weight: normal;
+    clear: left;
+ 
 
 }
 .principal p {
     margin:  0 0 1em;
+    
+    
+
 
 }
 .principal strong{
@@ -150,5 +164,101 @@ section{
     font-style: italic;
 }
 .beneficios{
+  position: relative;
+   left:24%;
+   top:-10em;
     width:60%;
+    
+}
+.utensilios{
+ float: left;
+ width:120px;
+ margin:  0 20px 20px 0 ;
+
+}
+.botao{
+    display: none;
+    width: 30px;
+    border-top: 2px solid;
+    position: absolute;
+    left:50%;
+    background: none;
+    
+  
+}
+.botao::after,.botao::before{
+    display: block;
+    content: '';
+    height: 2px;
+    margin-top: 5px;
+    background: black;
+    transition: .5s;
+}
+.mapa{
+    padding:  3em 0 0;
+    
+    
+}
+.mapa p {
+    text-align: center;
+    margin: 0 0 2em;
+  
+
+}
+.c{
+    position: relative;
+    left:24%;
+    top:-10rem;
+    width: 600px;
+    margin: 1em auto;
+}
+.q{
+   position: relative;
+   top:160px;
+  
+}
+@media screen  and (min-width:500px) and (max-width:600px){
+    .botao{
+        display: block;
+    }
+  .nav{
+    display: none;
+  }
+  .botao.active{
+    border-top: none;
+   position: absolute;
+   top:3rem;
+
+   
+  }
+  .botao.active::after{
+    position: relative;
+    transform: rotate(138deg);
+    top:-7px;
+    transition: .5s;
+
+  }
+  .botao.active::before{
+    position: relative;
+    transform: rotate(225deg);
+    transition: .5s;
+
+  }
+
+  .active{
+    display: block;
+    
+  }
+  ul{
+    display: block;
+  }
+  header.active{
+    transition: .5s;
+    padding-bottom: 50px;
+    overflow-y: hidden;
+    
+  }
+  li{
+    padding: 40px 0 0 ;
+  }
 }
