--- a/exAlura4/css/raiz.css
+++ b/exAlura4/css/raiz.css
@@ -1,5 +1,5 @@
 @charset "UTF-8";
-
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&display=swap');
 
 :root{
     --cor1: rgb(228, 239, 251);
@@ -23,6 +23,8 @@ body{
     width: 100vw;
     height: 100vh;
     background: var(--cor1);
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: "Montserrat", sans-serif;
+    
     
 }
+
