--- a/exAlura4/css/estilo.css
+++ b/exAlura4/css/estilo.css
@@ -39,7 +39,11 @@ a:hover{
 .logo{
     width: 80px;
 }
-
+.center{
+    width:40%;
+    display: inline-block;
+    vertical-align: top;
+}
 #alura{
     position: relative;
     padding: 5px;
@@ -95,10 +99,8 @@ a:hover{
     
 }
 .item{
-    position: relative;
     text-transform: none;
-    
-    line-height: 45px;
+    line-height: 1.5;
 
 }
 .item:first-child{
@@ -134,15 +136,13 @@ footer{
 
 }
 
-.center{
-    display: block;
-}
+
 section{
     width: 1000px;
     transform: translateX(100px);
 }
 .titulo-center{
-   text-align: center;
+     text-align: center;
     font-size: 2em;
     margin:  0 0 1em;
     font-weight: normal;
@@ -164,11 +164,14 @@ section{
     font-style: italic;
 }
 .beneficios{
-  position: relative;
-   left:24%;
-   top:-10em;
     width:60%;
-    
+   
+}
+.conteudo-beneficios{
+    width:640px;
+    margin: 0 auto;
+    float:left;
+   
 }
 .utensilios{
  float: left;
@@ -199,24 +202,22 @@ section{
     
     
 }
+.q{
+    padding:3em 3rem 0; 
+}
 .mapa p {
     text-align: center;
     margin: 0 0 2em;
+    
   
 
 }
 .c{
     position: relative;
-    left:24%;
-    top:-10rem;
-    width: 600px;
-    margin: 1em auto;
-}
-.q{
-   position: relative;
-   top:160px;
-  
-}
+    margin:1em auto;
+    transform: translateX(180px);
+    width: 540px;
+
 @media screen  and (min-width:500px) and (max-width:600px){
     .botao{
         display: block;
@@ -261,4 +262,5 @@ section{
   li{
     padding: 40px 0 0 ;
   }
+}
 }
