--- a/exAlura4/css/estilo.css
+++ b/exAlura4/css/estilo.css
@@ -36,15 +36,10 @@ a:hover{
 
     
 }
-main{
-    position: relative;
-    width: 1200px;
-    margin: auto;
-  
-    
-}
+
 .logo{
     width: 80px;
+  
 }
 .center{
     width:40%;
@@ -122,6 +117,7 @@ footer{
     padding:40px 0 0 ;
     text-align: center;
     background:url('../image/bg.jpg');
+    width: 100vw;
     
     
 }
@@ -139,7 +135,7 @@ footer{
 
 /* pagina inicial*/
 .banner{
-    width: 100%;
+    width: 100vw;
 
 }
 
@@ -152,7 +148,8 @@ footer{
     margin:  0 0 1em;
     font-weight: normal;
     transform: translateX(-2rem);
-   
+    color:rgba(0,0,0,.7);
+    
     
      
     
@@ -162,6 +159,7 @@ footer{
 .principal p {
     margin:  0 0 1em;
     font-size: .950em;
+    
     
     
 
@@ -176,7 +174,15 @@ footer{
 .beneficios{
     width:60%;
     transform: translateX(2rem);
+    opacity: .5;
+    transition: 400ms;
+    box-shadow: 10px 10px 5px   black;
  
+}
+.beneficios:hover{
+    opacity: 1;
+   
+
 }
 .principal{
     padding: 3em 0;
@@ -229,6 +235,8 @@ footer{
 .q{
     padding:3em 10rem 0; 
     background: #8888;
+    box-shadow: inset  0 0 30px rgb(226, 8, 8);
+    width: 100vw;
    
 }
 .mapa p {
@@ -253,5 +261,5 @@ footer{
 }
 main{
    
-width: 100%;
+width: 100vw;
 }
