--- a/exAlura05/css/estilos.css
+++ b/exAlura05/css/estilos.css
@@ -63,5 +63,12 @@ h1 {
 
 .tecla.active:focus,
 .tecla:active:focus {
-  box-shadow: 3px 3px 0 var(--vermelha-escura) inset, 1px 1px 10px var(--luz);
+  box-shadow: 3px 3px 0 var(--vermelha-escura) inset, 1px 1px 10px var(--luz); 
+}
+
+.toque{
+  background-color: black;
+  color:white;
+
+
 }
