--- a/ex69/style.css
+++ b/ex69/style.css
@@ -5,56 +5,15 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
-    border: 0;
-}
-body{
-    font-family: Arial, Helvetica, sans-serif;
-}
-
-main{
-    height: 80px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    background: linear-gradient(25deg, rgb(242, 248, 253),rgb(158, 238, 232),rgb(44, 198, 254), rgb(94, 204, 251));
-}
-.menu{
-     display: flex;
-     list-style-type: none;
-}
-li{
-    margin-right: 2rem;
-   
-    border-radius: 5px;
-}
-a{
-    font-size: 22px;
-    text-decoration: none;
-    color:white;
-    cursor: pointer;
-}
-a:hover{
-    padding: 0 10px 0 10px ;
-    background: rgb(3, 73, 111);
-    border-radius: 5px;
-    font-weight: bold;
-    box-shadow:  2px 1px 5px 1px black;
-
 
 }
-.botao{
+canvas{
+    position: relative;
     display: block;
-    border-top: 2px solid;
-    width:30px;
-    margin:  auto;
-   background: transparent;
+    width: 600px;
+    height: 400px;
+    margin: auto;
+    top:100px;
+    box-shadow: 0 0 15px black;
    
-  
-}
-.botao::after,.botao::before{
-    display: block;
-    content: '';
-    height: 2px;
-    margin-top: 6px;
-    background: black;
 }
