--- a/arquiteturaCss/assets/css/menu-link.css
+++ b/arquiteturaCss/assets/css/menu-link.css
@@ -1,18 +1,18 @@
-.menu-item:last-child  .menu-link {
+.menu__item:last-child.menu__link {
     margin-right: 0;
   }
   
-.menu-link{
+.menu__link{
     color:#808080;
     margin-right:  1.25rem;
     text-decoration: none;
     text-transform: lowercase;
 
 }
-.menu-item:first-child .menu-link{
+.menu__item:first-child .menu__link{
     color:#333333;
     font-weight: bold;
 }
-.menu-link:hover{
+.menu__link:hover{
     text-decoration: underline   rgb(2, 6, 60);
 }
