--- a/arquiteturaCss/assets/css/receitas/receita.css
+++ b/arquiteturaCss/assets/css/receitas/receita.css
@@ -5,3 +5,23 @@
     margin: 0  5rem 5rem 0; 
     width: calc(25%  - 5rem);
 }
+@media screen  and (min-width:0){
+    .receita{
+        margin-right: 1rem;
+        width:100%;
+
+    }
+}
+@media screen  and (min-width:768px){
+     .receita{
+        margin-right: 2.5rem;
+        width: calc(33.33% - 2.5rem);
+        
+    }
+}
+@media screen  and (min-width:992px){
+    .receita{
+        margin-right: 5rem;
+        width: calc(25%  - 5rem);
+    }
+}
