--- a/arquiteturaCss/assets/css/sobre/sobre__descricao.css
+++ b/arquiteturaCss/assets/css/sobre/sobre__descricao.css
@@ -1,5 +1,17 @@
 .sobre__descricao{
     color:#595959;
     font-weight: 100;
-    font-size: 1.75rem;
+    
+}
+@media screen  and (min-widtrh:0){
+    .sobre__descricao{
+        font-size: 1.3rem;
+    }
+    
+}
+@media screen and (min-width:768px) {
+    .sobre__descricao{
+        font-size: 1.75rem;
+    }
+    
 }
