--- a/arquiteturaCss/assets/css/sobre/sobre__titulo.css
+++ b/arquiteturaCss/assets/css/sobre/sobre__titulo.css
@@ -1,5 +1,17 @@
 .sobre__titulo{
     font-family: "Pacifico",cursive;
-    font-size: 3.0625rem;
+    
     color:#8d0606;
+}
+@media screen  and (min-widtrh:0){
+    .sobre__titulo{
+        font-size: 2rem;
+    }
+    
+}
+@media screen and (min-width:768px) {
+    .sobre__titulo{
+        font-size: 3.0625rem;
+    }
+    
 }
