--- a/caixalflex/css/flexbox.css
+++ b/caixalflex/css/flexbox.css
@@ -46,7 +46,7 @@
    
     display: flex;
     flex-wrap:wrap;
-    justify-content: flex-start;
+ 
    
     
    
@@ -55,6 +55,21 @@
     width: 23%;
 
 }
+.conteudoPrincipal-cursos-link:nth-child(4n){
+    margin-right: 0;
+    
+}
+.conteudoPrincipal-cursos-link:nth-child(4n+1){
+    margin-right: 0;
+    
+}
 
+    .cabecalhoPrincipal-nav{
+        flex-direction: column;
 
+    }
+    .cabecalhoPrincipal .container{
+        flex-direction: column;
 
+    }
+    
