--- a/caixalflex/css/flexbox.css
+++ b/caixalflex/css/flexbox.css
@@ -36,24 +36,34 @@
 .rodapePrincipal-navMap-list{
     display: flex;
     flex-flow: column wrap;
-    height: 255px;
+    height: 250px;
+    
    
     
 
 
 }
 .conteudoPrincipal-cursos{
-   
+    justify-content: center;
     display: flex;
     flex-wrap:wrap;
+    width: 80%;
+    margin: 0 auto;
  
    
     
    
 }
 .conteudoPrincipal-cursos-link{
-    width: 23%;
+    width: 25%;
+    he
+    
+    
+    
 
+}
+.subtitulo{
+    text-align: center;
 }
 .conteudoPrincipal-cursos-link:nth-child(4n){
     margin-right: 0;
@@ -63,6 +73,9 @@
     margin-right: 0;
     
 }
+/*Mobile*/
+@media screen and (max-width:768px) {
+    
 
     .cabecalhoPrincipal-nav{
         flex-direction: column;
@@ -70,6 +83,32 @@
     }
     .cabecalhoPrincipal .container{
         flex-direction: column;
+        align-items: initial;
+        text-align: center;
 
     }
-    
+ 
+    .conteudoPrincipal-cursos{
+        flex-direction: column;
+    }
+    .conteudoPrincipal-cursos-link{
+        width: 100%;
+    }
+    .rodapePrincipal-navMap-list{
+        height: auto;
+    }
+    .rodapePrincipal-patrocinadores .container{
+        flex-direction: column;
+        align-items: center;
+    }
+    .rodapePrincipal-contatoForm{
+        width: 100%;
+    }
+    .rodapePrincipal-patrocinadores-list{
+        margin: 0;
+        width: 100%;
+    }
+    .rodapePrincipal-contatoForm-fieldset{
+        justify-content: center;
+    }
+}
