--- a/caixalflex/css/flexbox.css
+++ b/caixalflex/css/flexbox.css
@@ -113,4 +113,21 @@
     .rodapePrincipal-contatoForm-fieldset{
         justify-content: center;
     }
+    .videoSobre .container{
+       display: flex;
+ 
+    }
+    .videoSobre-sobre{
+        text-align: center;
+        display: flex;
+        flex-direction: column;
+        flex-grow: 1;
+     
+    }
+    .videoSobre-sobre-list{
+        flex-grow: 1;
+    }
+    .videoSobre-video{
+        flex-grow: 1;
+    }
 }
