--- a/quadrados-flex/style.css
+++ b/quadrados-flex/style.css
@@ -20,8 +20,8 @@ body,html{
 .flexItem{
     width: 50px;
     height:50px;
-    /*flex-grow: 1;
-    */
+   
+    
     
 }
 .flexItem:nth-child(1){
@@ -35,4 +35,7 @@ body,html{
 }
 .flexItem:nth-child(4){
     background-color: yellow;
+}
+.primeira{
+   
 }
