--- a/quadrados-flex/style.css
+++ b/quadrados-flex/style.css
@@ -18,9 +18,12 @@ body,html{
  
 }
 .flexItem{
-    width: 50px;
+
     height:50px;
-   
+    flex: 0 1 100px;
+    
+    
+ 
     
     
 }
@@ -36,6 +39,4 @@ body,html{
 .flexItem:nth-child(4){
     background-color: yellow;
 }
-.primeira{
    
-}
