--- a/projeto-apeperia/css/cabecalho.css
+++ b/projeto-apeperia/css/cabecalho.css
@@ -34,3 +34,11 @@ border-bottom: 1px solid var(--borda-cabecalho-mobile);
     margin-bottom: 1.25rem;
     margin-left: .7rem;
 }
+@media screen and (min-width:1024px) {
+    .cabecalho{
+        flex-direction: row;
+        justify-content: space-between;
+        border: none;
+    }
+    
+}
