--- a/projeto-apeperia/css/base.css
+++ b/projeto-apeperia/css/base.css
@@ -39,3 +39,10 @@ body{
     margin: 0 auto;
 }
 
+@media screen  and (min-width:1024px){
+    .container{
+        padding-left: calc((100% - 940px)/2);
+        padding-right: calc((100% - 940px)/2);
+    }
+    
+}
