--- a/Projeto Inicial Grid Layout/alura-store/assets/css/populares.css
+++ b/Projeto Inicial Grid Layout/alura-store/assets/css/populares.css
@@ -1,5 +1,6 @@
 .populares{
     padding:3rem 0;
+    
 }
 .populares__conteudo{
     display: flex;
@@ -13,16 +14,18 @@
     "card-imagem"
     "card-corpo";
     grid-template-columns: 100%;
-    grid-template-rows: 173px auto;
     background: #fdfdfd;
-    width: calc(20% - 1rem);
-    margin-right: 1rem;
-    padding:.5rem;
+    
+ 
+  
+
+
+    
     
 }
 .populares__card___imagem{
     grid-area: card-imagem;
-    height: 100%;
+    height: 80%;
     width:100%;
 }
 .populares__card___corpo{
@@ -31,7 +34,41 @@
     grid-template-areas: 
     "card-cabecalho"
     "card-conteudo";
-    grid-template-rows: 50px auto;
-   gap:.5rem;
-    padding:.75rem;
+    grid-template-rows: 30px auto;
+    gap:.2rem;
+    padding:.075rem;
+}
+.populares__card___titulo{
+    padding-bottom: .2rem;
+    margin-top: -2rem;
+    font-size:1.5rem;
+    color:#333;
+
+}
+.populares__card___data{
+    color:#808080;
+    font-size: .9rem;
+
+}
+.populares__card___descricao{
+    font-size: 80%;
+    color:#333;
+    line-height: 1.2;
+    margin:1rem 0;
+
+    
+    
+}
+.populares__cabecalho{
+    border-bottom:  1px solid #dcdcdc;
+    display: flex;
+    justify-content: space-between;
+}
+.populares__botao{
+    background: transparent;
+    border: none;
+    color:#333333;
+}
+.populares__card:last-child{
+    margin-right: 0;
 }
