--- a/mochila-de-viagem/css/style.css
+++ b/mochila-de-viagem/css/style.css
@@ -130,3 +130,26 @@ html {
     font-weight: 400;
 }
 
+
+@media screen  and (max-width:600px){
+
+  .conteudo {
+    display: block;
+  
+  }
+  .conteudo .principal{
+    display: block;
+ 
+    min-width: 400px;
+    align-items: center;
+    text-align: center;
+    margin-bottom: 5px;
+  }
+  .lista{
+    margin: auto;
+    
+  }
+  .item strong{
+    text-align: center;
+  }
+}
